Started work on d

--- a/Project2/makefile
+++ b/Project2/makefile
@@ -2,8 +2,11 @@ CPPflags = g++ -O3
 
 LIB = -DARMA_DONT_USE_WRAPPER -lblas -llapack
 
-#main: final_2b.x
-#			${CPPflags} -o final_2b.x 2.cpp eigvals.cpp ${LIB}
+#2b: 2b.o eigvals.o
+#		${CPPflags} -o final_2b.x 2b.cpp eigvals.cpp ${LIB}
 
-test: test-2.x test-2.cpp
-			${CPPflags} -o test-2.x test-2.cpp eigvals.cpp ${LIB}
+#test: test-2.x test-2.cpp
+#		${CPPflags} -o test-2.x test-2.cpp eigvals.cpp ${LIB}
+
+2d: 2d.o eigvals.o
+		${CPPflags} -o test2d.x 2d.cpp eigvals.cpp ${LIB}
