--- a/Project3/makefile
+++ b/Project3/makefile
@@ -2,5 +2,5 @@ CPPflags = g++ -O3
 
 LIB = -DARMA_DONT_USE_WRAPPER -lblas -llapack
 
-3a: main.o euler.o planet.o
+main: main.o planet.o euler.o
 		${CPPflags} main.cpp planet.cpp euler.cpp  -o test.x  ${LIB}
