--- a/Project3/makefile
+++ b/Project3/makefile
@@ -2,5 +2,5 @@ CPPflags = g++ -O3
 
 LIB = -DARMA_DONT_USE_WRAPPER -lblas -llapack
 
-main: main.o planet.o euler.o
-		${CPPflags} main.cpp planet.cpp euler.cpp  -o test.x  ${LIB}
+main: main.o planet.o solver.o
+		${CPPflags} main.cpp planet.cpp solver.cpp  -o test.x  ${LIB}
