--- a/Project5/makefile
+++ b/Project5/makefile
@@ -1,8 +1,14 @@
-CPPflags = g++ -Wall -std=c++11 -O3
+CPPflags = g++ -Wall -std=c++11
 
 
 LIB = -DARMA_DONT_USE_WRAPPER -lblas -llapack
 
 
-main: main.o ForwEuler.o
+forw: main.o ForwEuler.o
 			${CPPflags} main.cpp ForwEuler.cpp -o test.x  ${LIB}
+
+back: main.o BackEuler.o tridiag.o
+			${CPPflags} main.cpp BackEuler.cpp tridiag.cpp -o test.x  ${LIB}
+
+cn: main.o CrankNic.o tridiag.o
+			${CPPflags} main.cpp CrankNic.cpp tridiag.cpp -o test.x  ${LIB}
