--- a/Project5/FinalModel/2D/makefile
+++ b/Project5/FinalModel/2D/makefile
@@ -7,8 +7,8 @@ LIB = -DARMA_DONT_USE_WRAPPER -lblas -llapack
 forw: main.o ForwEuler.o
 			${CPPflags} main.cpp ForwEuler.cpp -o test.x  ${LIB}
 
-back: main.o BackEuler.o tridiag.o
-			${CPPflags} main.cpp BackEuler.cpp tridiag.cpp -o test.x  ${LIB}
+back: main.o BackEuler.o Jacobi.o
+			${CPPflags} main.cpp BackEuler.cpp Jacobi.cpp -o test.x  ${LIB}
 
 cn: main.o CrankNic.o tridiag.o
 			${CPPflags} main.cpp CrankNic.cpp tridiag.cpp -o test.x  ${LIB}
